tests/errors/flow/unreachable-after-return.fn
---
Description: Code following an unconditional return is unreachable
Expected: FN4000
---

type Program
{
    static fn Main -> i32
    {
        return 1
        var x = 10
    }
}
